force-app/main/default/objects/Invoice_Export__c.object
<CustomObject>
    <description>Invoices as exported from Xero. Used to clean up invoice numbers and xero ids.</description>
    <fields>
        <fullName>AmountDue__c</fullName>
        <label>AmountDue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AmountPaid__c</fullName>
        <label>AmountPaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContactID__c</fullName>
        <label>ContactID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <label>ContactName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyCode__c</fullName>
        <label>CurrencyCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <label>DueDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FullyPaidOnDate__c</fullName>
        <label>FullyPaidOnDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InvoiceNumber__c</fullName>
        <label>InvoiceNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsMatched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Matched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LineAmountTypes__c</fullName>
        <label>LineAmountTypes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Short__c</fullName>
        <label>Reference Short</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubTotal__c</fullName>
        <label>SubTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalTax__c</fullName>
        <label>TotalTax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdatedDate__c</fullName>
        <label>UpdatedDate</label>
        <type>DateTime</type>
    </fields>
    <label>Invoice Export</label>
    <nameField>
        <label>Invoice ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Exports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>